--- a/templates/compose.handlebars
+++ b/templates/compose.handlebars
@@ -1,4 +1,4 @@
-<form class="compose">
+<form class="compose expand">
 	<textarea placeholder="Compose new Tweet..."></textarea>
 	<div>
 		<span class="count">140</span>
